Jumbotron Spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -77,8 +77,9 @@ img,.carousel{
 	background-image:url(../img/jumbotron.jpg);
 	box-shadow:0px 2px 5px #bbb;
 }
-.jumbotron h1{
+.jumbotron h1,h2,h3,h4,h5,h6{
 	margin-top:5%;
+	margin-bottom:5%;
 }
 .jumbotron h1, .jumbotron h3{
 	color:#fff;
